# ortholineage-guardian

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  dbt_project.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: BATCH2_CAPABILITY_MATRIX.md  METADATA_CONTRACT.md  SUBMISSION_CHECKLIST.md
examples/findings/: findings.json
examples/remediation/: remediation.patch
examples/reports/: migration_impact_report.md
ingest/: dbt_source.yml
models/: schema.yml
models/export/: research_export.sql
models/ml/: ml_feature_table.sql
models/quality/: dq_metrics.sql
models/registry/: trauma_registry.sql
models/report/: dashboard_report.sql
models/staging/: stg_ed_documentation.sql
profiles/: profiles.yml
scripts/: build.sh  datahub_down.sh  datahub_up.sh  demo.sh  emit_clinical_metadata.py  generate_goldens.py  generate_remediation.py  ingest_all.sh  mcp_smoke.py  mcp_verify_contract.py  render_artifacts.py  run_policy_engine.py  writeback.py  writeback_reset.py  writeback_verify.py
scripts/capability_spike/: _common.py  row3_write_tag.py  row4_write_description.py  row5_incident.py
seeds/: ed_documentation_raw.csv
src/ortholineage_guardian/: __init__.py  cli.py  (+4 more)
tests/: _faulty_fixtures.py  assert_ed_arrival_after_injury.sql  assert_gcs_qualifier_coherent_when_not_assessed.sql  conftest.py  test_artifacts.py  test_detection_provenance.py  test_golden_stability.py  test_no_llm_fallback.py  test_policy_baseline_zero_fp.py  test_policy_faulty_positives.py  test_scenario_diff.py  test_schema_guard.py  test_truncation.py  test_writeback.py
(+22 files in other folders)
