[project]
name = "ortholineage-guardian"
version = "0.1.0"
description = "Clinically informed data-governance agent for orthopaedic-trauma registry lineage (synthetic, PHI-free)."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Apache-2.0" }
dependencies = [
    "anthropic==0.118.0",
    "dbt-core==1.12.0",
    "dbt-duckdb==1.10.1",
    "duckdb==1.5.5",
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
